truncation fixed (#52)
* category tarts deleted and category candies added

* styles edited

* truncation fixed

* update

* Delete Global.js

--- a/client/src/components/Products/category.module.css
+++ b/client/src/components/Products/category.module.css
@@ -8,6 +8,11 @@
     margin: 30px 0;
 }
 
+.title {
+    font-weight: bold;
+    color: #303739;
+}
+
 .text {
     align-items: center;
     width: 75%;
@@ -44,28 +49,31 @@
 
 .description {
     --lh: 1.5rem;
-    line-height: var(--lh);
+    margin: 2rem auto;
 }
 
-.description p {
+.truncate {
     font-size: 1.1rem;
     --max-lines: 3;
+    line-height: var(--lh);
     max-height: calc(var(--lh) * var(--max-lines));
     overflow: hidden;
+    padding-right: 1rem; /* space for ellipsis */
 }
 
-.description p::before {
+.truncate::before {
     content: "...";
     position: absolute;
-    bottom: 15px;
-    right: 15px;
+    bottom: 34px;
+    right: 17px;
+
 }
 
-.description p::after {
+.truncate::after {
     content: "";
     position: absolute;
     right: 0; /* note: not using bottom */
-    width: 1rem;
-    height: 1rem;
+    width: 2.5rem;
+    height: 1.5rem;
     background: white;
 }
